# inf2004-team42

./: CMakeLists.txt  README.md
driver/: CMakeLists.txt  driverDemo.c
driver/encoder/: CMakeLists.txt  encoder.c  motor.h
driver/irline/: CMakeLists.txt  infrared.c  infrared.h  infrared_sensor.h
driver/magnometer/: CMakeLists.txt  magnometer.c  magnometer.h
driver/motor/: CMakeLists.txt  motor.h  motor_control.c
driver/pid_motor/: CMakeLists.txt  motor.h  pid_motor.c
driver/ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic_sensor.h
driver/wifi/: CMakeLists.txt  client.c  wifi.c  wifi.h
implementation/: CMakeLists.txt  client.c  infrared.h  magnometer.h  main.c  motor.h  ultrasonic_sensor.h  wifi.h
implementation_v2/: CMakeLists.txt  client.c  infrared.h  magnometer.h  main_v2.c  motor.h  ultrasonic_sensor.h  wifi.h
testCodes/: CMakeLists.txt
testCodes/SimpleTestCode/: CMakeLists.txt  blink.c
testCodes/tempMagnometerCode/: CMakeLists.txt  temp.c
